refactor: apply code cleanup in `DataProtectionService`
Standardized formatting, improved readability, and removed unused imports. Simplified stream operations by replacing deprecated methods with updated alternatives (`.toList()`), fixed typos in method names, and refactored redundant conditions and blocks for better maintainability.